--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "voucher-code-generator": "^1.3.0"
   }
 }
