--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "pm2": "^5.3.0",
     "voucher-code-generator": "^1.3.0"
   }
 }
